--- a/DeveloperKataDesign/DeveloperKataDesignSimulator/DeveloperKataDesignSimulator.csproj
+++ b/DeveloperKataDesign/DeveloperKataDesignSimulator/DeveloperKataDesignSimulator.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DeveloperKataDesign\DeveloperKataDesign.csproj" />
+  </ItemGroup>
+
 </Project>
